Reeact setup & upload Like Button

--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="kr">
+	<meta charset="UTF-8" />
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="src/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
+		<script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+		<title>Web Game ZeroC</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+    <div id = "root"></div>
+    <script>
+      const e = React.createElement;
+
+			class LikeButton extends React.Component{
+				constructor(props){
+					super(props);
+				}
+				
+				render(){
+					return e('button', null, 'Like');
+				}
+				//<button>Like</button> 이 Tag를 만들어 준다는 구문이다.
+			}
+    </script>
+	  <script>
+			ReactDOM.render(e(LikeButton), document.querySelector('#root'));
+		</script>
+	</body>
 </html>
