--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
 			class LikeButton extends React.Component{
 				constructor(props){
 					super(props);
+					this.state = {
+						liked : false,
+					};
 				}
 				
 				render(){
-					return e('button', null, 'Like');
+					return e('button', {onClick: () => {this.setState({liked : true})}, type: "submit"}, 'Like');
 				}
-				//<button>Like</button> 이 Tag를 만들어 준다는 구문이다.
 			}
     </script>
 	  <script>
