--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				}
 				
 				render(){
-					return e('button', {onClick: () => {this.setState({liked : true})}, type: "submit"}, 'Like');
+					return e('button', {onClick: () => {this.setState({liked : true})}, type: "submit"}, this.state.liked === true ? 'Liked': 'Like',);
 				}
 			}
     </script>
