--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
   <head>
     <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
 		<script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+		<script src="https://unpkg.com/babel-standalone@7/babel.min.js"></script>
 		<title>Web Game ZeroC</title>
   </head>
   <body>
     <div id = "root"></div>
-    <script>
-      const e = React.createElement;
-
+    <script type="text/babel">
 			class LikeButton extends React.Component{
 				constructor(props){
 					super(props);
@@ -20,12 +19,12 @@
 				}
 				
 				render(){
-					return e('button', {onClick: () => {this.setState({liked : true})}, type: "submit"}, this.state.liked === true ? 'Liked': 'Like',);
+					return <button type="submite" onClick= {() => {this.setState({liked : true})}>{this.state.liked === true ? 'Liked' : 'Like'}</button>;
 				}
 			}
     </script>
-	  <script>
-			ReactDOM.render(e(LikeButton), document.querySelector('#root'));
+	  <script type="text/babel">
+			ReactDOM.render(<LikeButton />, document.querySelector('#root'));
 		</script>
 	</body>
 </html>
