--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="kr">
 	<meta charset="UTF-8" />
-  <head>
-    <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
+  <head> 
+	<script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
 		<script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
 		<script src="https://unpkg.com/babel-standalone@7/babel.min.js"></script>
 		<title>Web Game ZeroC</title>
   </head>
   <body>
     <div id = "root"></div>
+		<script type="text/babel">
+	ReactDOM.render(<LikeButton />, document.querySelector('#root'));
+</script>
+
   </body>
 </html>
